--- a/makefile/cuda/CMakeLists.txt
+++ b/makefile/cuda/CMakeLists.txt
@@ -1,6 +1,8 @@
-cmake_minimum_required(VERSION 3.13)
-SET(CUDA_VERSION 10.0)
+cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
+project(cuda)
+
 FIND_PACKAGE(CUDA ${CUDA_VERSION} REQUIRED)
+
 STRING (TOLOWER ${CMAKE_SYSTEM_NAME} LOWER_SYSTEM_NAME)
 SET(CUDA_TARGET_INCLUDE  ${CUDA_TOOLKIT_ROOT_DIR}-${CUDA_VERSION}/targets/${CMAKE_HOST_SYSTEM_PROCESSOR}-${LOWER_SYSTEM_NAME}/include)
 
